UtahLiveDataTest/src/objects/Form__c.object
<CustomObject>
    <fields>
        <fullName>Months_Cal__c</fullName>
        <description>Used in RESEARCH &amp; RELATED BUDGET - Budget Period Form</description>
        <label>Months Cal.</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Months_Sum__c</fullName>
        <description>Used in RESEARCH &amp; RELATED BUDGET - Budget Period Form</description>
        <label>Months Sum.</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NOUSP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NOUSP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NameOfFederalAgency__c</fullName>
        <description>This field is used in Application for Federal Assistance form as Name of  Federal Agency, SF-424 RR Multi-Project Cover form.</description>
        <label>Name of Federal Agency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NarrativeA1__c</fullName>
        <label>NarrativeA1</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>NarrativeA2__c</fullName>
        <label>NarrativeA2</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>NarrativeA3__c</fullName>
        <label>NarrativeA3</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>NarrativeC1__c</fullName>
        <label>NarrativeC1</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>NarrativeD1__c</fullName>
        <label>NarrativeD1</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>NarrativeD2__c</fullName>
        <label>NarrativeD2</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>NarrativeD3__c</fullName>
        <label>NarrativeD3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WEEKLY</fullName>
                </value>
                <value>
                    <fullName>MONTHLY</fullName>
                </value>
                <value>
                    <fullName>QUARTERLY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NarrativeE3__c</fullName>
        <label>NarrativeE3</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>NarrativeE4__c</fullName>
        <label>NarrativeE4</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>NarrativeF1__c</fullName>
        <label>NarrativeF1</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>NarrativeF2__c</fullName>
        <label>NarrativeF2</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>NarrativeG5__c</fullName>
        <label>NarrativeG5</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>NarrativeG6__c</fullName>
        <label>NarrativeG6</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>NarrativeH1__c</fullName>
        <label>NarrativeH1</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>NonCriminalJustice__c</fullName>
        <label>NonCriminalJustice</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Social Services</fullName>
                </value>
                <value>
                    <fullName>Mental Health</fullName>
                </value>
                <value>
                    <fullName>Children&apos;s Justice Center</fullName>
                </value>
                <value>
                    <fullName>Public Housing</fullName>
                </value>
                <value>
                    <fullName>Other (Describe)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NonEnglish2__c</fullName>
        <label>C.  Non-English Speaking:</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Spanish-speaking</fullName>
                </value>
                <value>
                    <fullName>Speakers of an Asian language</fullName>
                </value>
                <value>
                    <fullName>Other:</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NonEnglish__c</fullName>
        <label>C.  Non-English Speaking:</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Spanish-speaking</fullName>
                </value>
                <value>
                    <fullName>Speakers of an Asian  language</fullName>
                </value>
                <value>
                    <fullName>Other:</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NonGovernmentalVictimServices__c</fullName>
        <label>Non-governmental victim services</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfStudents__c</fullName>
        <label>Number Of Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ODW__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Older and Disabled women</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OrgDUNSNumber__c</fullName>
        <description>This field is used in Project/Performance Site Location form as DUNS Number under Project/Performance Site Primary Location.</description>
        <label>DUNS Number 1</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationName2__c</fullName>
        <label>OrganizationName2</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationName__c</fullName>
        <description>This field is used in SF-424 RR Multi-Project Cover form.</description>
        <label>Organization Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationType__c</fullName>
        <label>Type of organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Community-based organization</fullName>
                </value>
                <value>
                    <fullName>Court</fullName>
                </value>
                <value>
                    <fullName>Domestic violence program</fullName>
                </value>
                <value>
                    <fullName>Domestic violence state coalition</fullName>
                </value>
                <value>
                    <fullName>Dual program (sexual assault and domestic violence)</fullName>
                </value>
                <value>
                    <fullName>Dual state coalition (sexual assault and domestic violence)</fullName>
                </value>
                <value>
                    <fullName>Government agency (Department of Human Services, Bureau of Health)</fullName>
                </value>
                <value>
                    <fullName>Law enforcement</fullName>
                </value>
                <value>
                    <fullName>Probation, parole, or other correctional agency</fullName>
                </value>
                <value>
                    <fullName>Prosecution</fullName>
                </value>
                <value>
                    <fullName>Sexual assault program</fullName>
                </value>
                <value>
                    <fullName>Sexual assault state coalition</fullName>
                </value>
                <value>
                    <fullName>Tribal coalition</fullName>
                </value>
                <value>
                    <fullName>Tribal government</fullName>
                </value>
                <value>
                    <fullName>Tribal sexual assault and/or domestic violence program</fullName>
                </value>
                <value>
                    <fullName>Unit of local government</fullName>
                </value>
                <value>
                    <fullName>University/school</fullName>
                </value>
                <value>
                    <fullName>Other (specify):</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <description>This field is used in SF424 RR Application for Federal Assistance form.</description>
        <label>Organization</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationalAffiliation__c</fullName>
        <description>This field is used in key Contacts form as Organizational Affiliation,Application for Federal Assistance form as Organizational Affiliation under Name and Contact information of person block.</description>
        <label>Organizational Affiliation</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherAgencies__c</fullName>
        <label>Other Agencies</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherBestPractices__c</fullName>
        <label>Other Best Practices</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OtherCriminalJusticeAgencyType__c</fullName>
        <label>Other Criminal Justice Agency Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OtherImplementingAgencyType__c</fullName>
        <label>Other Implementing Agency Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OtherJobTitlesDescriptions__c</fullName>
        <label>Other Job titles and descriptions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OtherNCJusticeAgencyType__c</fullName>
        <label>Other Non-Criminal Justice AgencyType</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OtherOrganizationType__c</fullName>
        <label>Other Organization Type</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OtherPrivateNonProfit__c</fullName>
        <label>Other Private Non-Profit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OtherProjectRole2__c</fullName>
        <label>OtherProjectRole2</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherProjectRole__c</fullName>
        <label>OtherProjectRole</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherResource__c</fullName>
        <label>OtherResource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherRevision__c</fullName>
        <description>This field is used in SF424 R&amp;R Application for Federal Assistance form.</description>
        <label>Other Revision</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherScopeofProject__c</fullName>
        <label>Other Scope of Project</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OtherTargetPopulation__c</fullName>
        <label>Other Target Population</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OtherTrainingContentAreas1__c</fullName>
        <label>Other</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OtherTrainingContentAreas2__c</fullName>
        <label>Other</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OtherTrainingType__c</fullName>
        <label>Other Training Type</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OtherTypeOfApplicant__c</fullName>
        <description>This field is used in Application for Federal Assistance form as Other under Type of Applicant block.</description>
        <label>Other (Type of Applicant)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <description>This field is used in Application for Federal Assistance form as Other, SF-424 RR Multi-Project Cover form.</description>
        <label>Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPOS__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Policies, Protocols, Orders and Services</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSA__c</fullName>
        <label>PSA</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Law Enforcement</fullName>
                </value>
                <value>
                    <fullName>Prosecution</fullName>
                </value>
                <value>
                    <fullName>Court Personnel (judges, magistrates, clerks, etc.)</fullName>
                </value>
                <value>
                    <fullName>Children/Youth (e.g., children of battered women residing in a shelter)</fullName>
                </value>
                <value>
                    <fullName>The General Public (e.g., public education or awareness designed to enhance services to women)</fullName>
                </value>
                <value>
                    <fullName>Victims</fullName>
                </value>
                <value>
                    <fullName>Public Sector Victim Services Providers</fullName>
                </value>
                <value>
                    <fullName>Private Non-Profit Vic Service Provider</fullName>
                </value>
                <value>
                    <fullName>Other:  (Please list)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PageTemplateConfig__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Page Template Config</label>
        <referenceTo>GNT__PageTemplate__c</referenceTo>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PageTemplateName__c</fullName>
        <description>This field is used to fetch the page template name of the form</description>
        <formula>PageTemplateConfig__r.Name</formula>
        <label>Page Template Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentForm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is for the self lookup in the RR forms to add subordinates to the projects in Used in RESEARCH &amp; RELATED BUDGET - Budget Period form, RR Senior/Kep Person profile form</description>
        <label>Form</label>
        <referenceTo>Form__c</referenceTo>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PercentIndicator__c</fullName>
        <formula>SexualAssault1__c + DomesticViolence1__c + Stalking__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Indicator</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Preapplication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre-Application</label>
        <referenceTo>PreApplication__c</referenceTo>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prefix__c</fullName>
        <description>This field is used in Certification Regarding Lobbying form as Prefix, Key Contacts form as Prefix, Application for Federal Assistance form as Prefix under Name and Contact Information of person block, SF-424 RR Multi-Project Cover form.</description>
        <label>Prefix</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr .</fullName>
                </value>
                <value>
                    <fullName>Mrs .</fullName>
                </value>
                <value>
                    <fullName>Miss</fullName>
                </value>
                <value>
                    <fullName>Ms .</fullName>
                </value>
                <value>
                    <fullName>Dr .</fullName>
                </value>
                <value>
                    <fullName>Rev .</fullName>
                </value>
                <value>
                    <fullName>Prof .</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrivateNonProfit__c</fullName>
        <label>Private Non-Profit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Family Justice Center</fullName>
                </value>
                <value>
                    <fullName>Rape Crisis</fullName>
                </value>
                <value>
                    <fullName>Religious Organization</fullName>
                </value>
                <value>
                    <fullName>Shelter</fullName>
                </value>
                <value>
                    <fullName>Mental Health</fullName>
                </value>
                <value>
                    <fullName>Other(Describe)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrivateSchoolPicklist__c</fullName>
        <label>PrivateSchoolPicklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>No changes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrivilegedInfoNo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used in Research &amp; Related Other Information form.</description>
        <label>Privileged Info No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrivilegedInfoYes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used in Research &amp; Related Other Project Information.</description>
        <label>Privileged Info Yes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProgramIsNotCoveredByEO12372__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used in Application for Federal Assistance form as Program not covered by E.O. 12372 under Application subject to review block, Research &amp; Related Other Project Information form.</description>
        <label>Program is not covered by E.O.12372</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProgramName__c</fullName>
        <description>This field is used in Certification regarding Maintenance of effort form</description>
        <formula>Application__r.FederalProgram__r.FederalProgramTitle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectAbstract__c</fullName>
        <description>This field is used in Project Abstract form as Project Abstract.</description>
        <label>Project Abstract</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ProjectCongressionalDistrict1__c</fullName>
        <description>This field is used in Project/Performance Site Location form as Project Congressional District under Project/Performance Site Primary Location block.</description>
        <label>Project Congressional District 1</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectExempt__c</fullName>
        <description>This field is used in Research &amp; Related Other Project Information.</description>
        <label>Project Exempt</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectRole__c</fullName>
        <description>This field is used in Key Contacts form as Contact 1 Project Role.</description>
        <label>Project Role</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Role2__c</fullName>
        <label>Project_Role2</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProposedProjectEndDate__c</fullName>
        <description>This field is used in Application for Federal Assistance form as End Date under Proposed Project block, SF-424 RR Multi-Project Cover form.</description>
        <label>End Date:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProposedProjectStartDate__c</fullName>
        <description>This field is used in Application for Federal Assistance form as Start Date under Proposed Project block, SF-424 RR Multi-Project Cover form.</description>
        <label>Start Date:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Province22__c</fullName>
        <description>This field is used in SF-424 RR Multi-Project Cover form.</description>
        <label>Province22</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Province2__c</fullName>
        <description>This field is used in Project/Performance Site Location form as Province under Project/Performance Site Location 1 block, SF-424 RR Multi-Project Cover form.</description>
        <label>Province2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProvinceTemp__c</fullName>
        <label>ProvinceTemp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <description>This field is used in Key Contacts form as Province, Project/Performance Site Location as Province under Project/Performance Site Primary Location block,Application for Federal Assistance form as Province under Address block,SF-424 RR Multi-Project Cover form.</description>
        <label>Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurposeofAward__c</fullName>
        <label>Purpose of Award</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initiate a new Program</fullName>
                </value>
                <value>
                    <fullName>Enhance/Expand Existing Program</fullName>
                </value>
                <value>
                    <fullName>Continuation Grant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q16CourtsOther__c</fullName>
        <label>Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q16CourtsSelection__c</fullName>
        <label>Selection</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>Other (specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q16Courts__c</fullName>
        <label>Courts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q16HealthCareOther__c</fullName>
        <label>Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q16HealthCareSelection__c</fullName>
        <label>Selection</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>Other (specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q16HealthCare__c</fullName>
        <label>Health care</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q16LawEnforcementOther__c</fullName>
        <label>Other</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Q16LawEnforcementSelection__c</fullName>
        <label>Selection</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>Other (specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q16LawEnforcement__c</fullName>
        <label>Law enforcement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q16ProbationOther__c</fullName>
        <label>Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q16ProbationSelection__c</fullName>
        <label>Selection</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q16Probation__c</fullName>
        <label>Probation and parole</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q16ProsecutionOther__c</fullName>
        <label>Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q16ProsecutionSelection__c</fullName>
        <label>Selection</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>Other (Specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q16Prosecution__c</fullName>
        <label>Prosecution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q16VictimServicesOther__c</fullName>
        <label>Other Victim Services</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Q16VictimServicesSelection__c</fullName>
        <label>Selection</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>Other (specify):</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q16VictimServices__c</fullName>
        <label>Victim services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q17__c</fullName>
        <label>Q17</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q18OtherNum__c</fullName>
        <label>Other: (Specify Number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>